# BillTracker

./: README.md  driver.sh
bill_tracker_node_suite/: await_request.js  get_bills.js  handle_bills.js  package-lock.json  package.json
get_bills/: .gitignore  index.js  package-lock.json  package.json
handle_bills/: .gitignore  Cargo.toml
handle_bills/src/: bill.rs  lib.rs  main.rs
kraken/: .gitignore  Cargo.toml
kraken/src/: config.rs  email.rs  lib.rs  main.rs
