[package]
name = "handle_bills"
version = "0.1.0"
authors = ["Nelson Penn <nelsonapenn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"

[dependencies.mongodb]
version = "1.0.0"
default-features = false
features = ["async-std-runtime"]

