[package]
name = "kraken"
version = "0.1.0"
authors = ["Arthur Penn <arthur.penn@samtec.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.30"
base64 = "0.12.3"
uuid = { version = "0.8.1", features = ["v4"] }
toml = "0.5"
serde = { version = "1.0", features = ["derive"]}
